<resources>
    <string name="app_name">PetBeer</string>
    <string name="all_beer">all beer</string>
    <string name="pay">pay</string>
    <string name="description_save">save</string>
    <string name="your_name">title</string>
    <string name="ammount">ammount</string>
    <string name="price0_5">0,5</string>
    <string name="price1">1</string>
    <string name="price1_5">1,5</string>
    <string name="remove">remove</string>
    <string name="menu_edit">edit</string>
    <string name="menu_sell">Sell</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what">which beer</string>
    <string name="howMany">Ammount</string>
    <string name="bottle">bottle</string>
    <string name="summary">Summary</string>
</resources>