<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.petbeer.SellFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/description_save"
        app:layout_constraintTop_toBottomOf="@id/sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_48"
        tools:ignore="ImageContrastCheck" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/enterBeer"
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/what"
    app:layout_constraintTop_toTopOf="parent">

    <AutoCompleteTextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        tools:ignore="LabelFor" />

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterBottle"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bottle"

        app:layout_constraintTop_toBottomOf="@id/enterBeer">

<AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterAmmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/howMany"

        app:layout_constraintTop_toBottomOf="@id/enterBottle">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#616161"
        android:inputType="number"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterBottle2"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bottle"

        app:layout_constraintTop_toBottomOf="@id/enterAmmount">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterAmmount2"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/howMany"

        app:layout_constraintTop_toBottomOf="@id/enterBottle2">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            android:inputType="number"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sum"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/summary"

        app:layout_constraintTop_toBottomOf="@id/enterAmmount2">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            android:inputType="number"

            />

    </com.google.android.material.textfield.TextInputLayout>
<!--<TextView-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:id="@+id/sum"-->
<!--    android:textSize="24sp"-->
<!--    app:layout_constraintTop_toBottomOf="@id/enterAmmount2"-->
<!--    android:visibility="visible"-->
<!--    android:hint="@string/summary"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>
